# OMNIA-FRAGILITY-CHECKER

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_NOTES_V0_2_0.md  pyproject.toml
docs/: STRUCTURAL_FRAGILITY_BRIDGE_V0_2.md  STRUCTURAL_OBSERVABILITY_ROLE.md  WHY_THIS_FAILS.md
examples/: sample_fragility_bridge_cases.jsonl  sample_outputs.csv  sample_outputs.jsonl
omnia_fragility_checker/: __init__.py  classifier.py  cli.py  core.py  reporter.py
tests/: test_cli.py  test_core.py  test_structural_fragility_bridge.py
